--- a/analysis/recent_analysis.ipynb
+++ b/analysis/recent_analysis.ipynb
@@ -7,8 +7,8 @@
    "outputs": [],
    "source": [
     "import sys\n",
-    "sys.path.append( '../utilities' )\n",
-    "from get_data import get_historical_from_path\n",
+    "sys.path.append( '..' )\n",
+    "from utilities.get_data import get_historical_from_path\n",
     "from os import listdir\n",
     "from os.path import isfile, join\n",
     "import pandas as pd\n",
