--- a/analysis/f&g_analysis.ipynb
+++ b/analysis/f&g_analysis.ipynb
@@ -7,8 +7,8 @@
    "outputs": [],
    "source": [
     "import sys\n",
-    "sys.path.append( '../utilities' )\n",
-    "from get_data import get_historical_from_db\n",
+    "sys.path.append( '..' )\n",
+    "from utilities.get_data import get_historical_from_db\n",
     "import pandas as pd\n",
     "import ccxt\n",
     "import matplotlib.pyplot as plt\n",
