--- a/analysis/tp_sl_analysis.ipynb
+++ b/analysis/tp_sl_analysis.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
-    "sys.path.append( '../utilities' )\n",
-    "from get_data import get_historical_from_db\n",
-    "from backtesting import basic_single_asset_backtest, plot_wallet_vs_asset, get_metrics\n",
+    "sys.path.append('..')\n",
+    "from utilities.get_data import get_historical_from_db\n",
+    "from utilities.backtesting import basic_single_asset_backtest, plot_wallet_vs_asset, get_metrics\n",
     "import pandas as pd\n",
     "import ccxt\n",
     "import matplotlib.pyplot as plt\n",
