add simulation to super reversal

--- a/analysis/time_analysis.ipynb
+++ b/analysis/time_analysis.ipynb
@@ -2,9 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'constants'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\trist\\Desktop\\backtest_tools\\analysis\\time_analysis.ipynb Cellule 1\u001b[0m in \u001b[0;36m<cell line: 11>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/trist/Desktop/backtest_tools/analysis/time_analysis.ipynb#W6sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mseaborn\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39msns\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/trist/Desktop/backtest_tools/analysis/time_analysis.ipynb#W6sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mIPython\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mdisplay\u001b[39;00m \u001b[39mimport\u001b[39;00m clear_output\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/trist/Desktop/backtest_tools/analysis/time_analysis.ipynb#W6sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mconstants\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mcoin_list\u001b[39;00m \u001b[39mimport\u001b[39;00m COIN_LIST\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/trist/Desktop/backtest_tools/analysis/time_analysis.ipynb#W6sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mutilities\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mdata_manager\u001b[39;00m \u001b[39mimport\u001b[39;00m ExchangeDataManager\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/trist/Desktop/backtest_tools/analysis/time_analysis.ipynb#W6sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mutilities\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mcustom_indicators\u001b[39;00m \u001b[39mimport\u001b[39;00m get_n_columns\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'constants'"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "sys.path.append('..')\n",
@@ -26,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +284,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "d5100c10c6b669a578e86ed43dbb636d25e3c9fb9ee424ec9e5e4bad34e2e434"
+    "hash": "2c9c6d4aed9a29c1a81de6cdc16f2499fc3cb9392a1edfca0916d59acf3c3b71"
    }
   }
  },
